# perma-status

./: .env.example  .gitignore  Dockerfile  README.md  captures.R  cloudflare.py  dump_captures.py  entrypoint.sh  env.example  graphql.py  index.py  justfile  monitor.py  perma.py  perma_this_week.py  perma_times.py  possible_stats.py  pyproject.toml  requirements.in  requirements.txt  util.py
.github/: dependabot.yml
.github/workflows/: regenerate.yml
docs/: CNAME  index.html  status.json
docs/static/: banner.js
static/css/: custom.css  global.css.map  skeleton.css
templates/: .gitignore  base.html  footer.html  index.html
