[tool.poetry]
name = "perma-status"
version = "0.2.0"
description = ""
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"
packages = [{include = "perma_status"}]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
click = "^8.1.3"
pygal = "^3.0.0"
jinja2 = "^3.1.2"
flask = "^2.2.2"
python-dateutil = "^2.8.2"
humanize = "^4.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
