[tool.poetry]
name = "perma-status"
version = "0.2.7"
description = ""
authors = ["Ben Steinberg <bsteinberg@law.harvard.edu>"]
readme = "README.md"
packages = [{include = "perma_status"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
python-dotenv = "^1.2.2"
requests = "^2.33.1"
click = "^8.3.3"
pygal = "^3.0.5"
jinja2 = "^3.1.6"
flask = "^3.1.3"
python-dateutil = "^2.9.0.post0"
humanize = "^4.14.0"
tenacity = "^9.0.0"
gunicorn = "^23.0.0"
urllib3 = ">=2.7.0,<3.0.0"
certifi = ">=2026.4.22"
idna = ">=3.14"
werkzeug = ">=3.1.8"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
