[project]
name = "perma-status"
version = "0.3.0"
description = "Static GitHub Pages site for status.perma.cc"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "humanize>=4.9",
    "jinja2>=3.1",
    "pygal>=3.0",
    "python-dateutil>=2.8",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "tenacity>=9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
